--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
 
   backend:
     build: backend
+    environment:
+      - DB_ENDPOINT=root:test@(db:3306)/gengendb
     depends_on:
       db:
         condition: service_healthy
@@ -12,6 +14,7 @@ services:
 
   db:
     image: mariadb:latest
+    command: '--default-authentication-plugin=mysql_native_password'
     restart: always
     environment:
       - MARIADB_DATABASE=gengendb
@@ -23,6 +26,8 @@ services:
       start_period: 30s
     networks:
       - backend_network
+    expose:
+      - '3306'
     volumes:
       - database:/var/lib/mysql
 
